# MarkItDownPro

./: .gitignore  README.md  pyproject.toml
macos/MarkItDownProApp/: Package.swift  build-app.sh
macos/MarkItDownProApp/Resources/: AppIcon.icns
macos/MarkItDownProApp/Sources/: MarkItDownProApp.swift
src/markitdownpro/: __init__.py  app.py  cache.py  cli.py  docx_converter.py  pdf_converter.py  translator.py
